# tek2

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  classtek_1_1_d_n_a-members.html  classtek_1_1_d_n_a.html  classtek_1_1_haploid-members.html  classtek_1_1_haploid.html  classtek_1_1_population-members.html  classtek_1_1_population.html  classtek_1_1_program-members.html  classtek_1_1_program.html  classtek_1_1_transposon-members.html  classtek_1_1_transposon.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  group__params.html  index.html  main.cpp  menudata.js  run.py  speciation.py  split.py  structtek_1_1_haploid_params-members.html  structtek_1_1_haploid_params.html  structtek_1_1_population_params-members.html  structtek_1_1_population_params.html  structtek_1_1_transposon_params-members.html  structtek_1_1_transposon_params.html  topics.html  treestats.R  visualize.R
.github/workflows/: build.yaml
docs/: annotated.html  classes.html  classtek_1_1_d_n_a-members.html  classtek_1_1_d_n_a.html  classtek_1_1_haploid-members.html  classtek_1_1_haploid.html  classtek_1_1_population-members.html  classtek_1_1_population.html  classtek_1_1_program-members.html  classtek_1_1_program.html  classtek_1_1_transposon-members.html  classtek_1_1_transposon.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dna_8hpp.html  dna_8hpp_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  group__params.html  haploid_8cpp.html  haploid_8hpp.html  haploid_8hpp_source.html  index.html  main_8cpp.html  menudata.js  modules.html  population_8cpp.html  population_8hpp.html  population_8hpp_source.html  program_8cpp.html  program_8hpp.html  program_8hpp_source.html  structtek_1_1_haploid_params-members.html  structtek_1_1_haploid_params.html  (+8 more)
rstats/: activity.R  biostrings.R  fig1.R  fig2.R  fig4.R  fig5.R  fig6.R  fitness.R  read.R  summary_json.R  test_selection.R  treeplot.R  treestats.R  visualize.R
src/: CMakeLists.txt  dna.hpp  haploid.cpp  haploid.hpp  individual.cpp  individual.hpp  main.cpp  population.cpp  population.hpp  program.cpp  program.hpp  transposon.cpp  transposon.hpp  version.cpp.in  version.hpp  version.hpp.in
test/: CMakeLists.txt  dna.cpp  haploid.cpp  population.cpp  transposon.cpp
